# cours_work_5

./: .gitignore  README.md  pyproject.toml
base/: conf_parser.py  config.py  database_creation.py  db.ini  db_manager.py  insert_db.py  queries.sql
src/: employees_id  hh_api_key.py  utils.py
